[package]
name = "db-key-macro"
version = "0.1.0"
edition = "2021"
description = "Attribute macro to generate fixed-length key-value database keys"
authors = ["Thomas Mundar <thomas@mundar.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Mundar/db-key"
keywords = ["database", "key", "attribute", "macro"]
categories = ["database", "development-tools"]
rust-version = "1.61"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.86"
quote = "1.0.37"
rand = "0.8.5"
syn = { version = "2.0.77", features = ["full", "extra-traits"] }

[dev-dependencies]
bincode = "1.3.3"
criterion = "0.5.1"
proptest = "1.5.0"
serde = { version = "1.0.210", features = ["derive"] }
smallvec = { version = "1.13.2", features = ["write"] }

[[bench]]
name = "benchmarks"
harness = false
